--- a/wow/package.json
+++ b/wow/package.json
@@ -15,10 +15,12 @@
     "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-font": "~12.0.10",
+    "expo-splash-screen": "^0.27.6",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "@expo/vector-icons": "^14.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
