--- a/wow/package.json
+++ b/wow/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-navigation/bottom-tabs": "^7.0.1",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
     "axios": "^1.7.7",
@@ -19,8 +21,12 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-calendar-strip": "^2.2.6",
+    "react-native-calendars": "^1.1307.0",
+    "react-native-gesture-handler": "^2.20.2",
+    "react-native-safe-area-context": "^4.14.0",
     "react-native-vector-icons": "^10.2.0",
-    "@expo/vector-icons": "^14.0.3"
+    "react-native-weekly-calendar": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
